# cpp

./: .gitignore
Sales_items/add_items/: main  main.cpp
Sales_items/add_multi_items/: infile  main  main.cpp  outfile
abort/: main  main.cpp
algos/: .vimspector.json
algos/extra_code/problems/3/: CMakeLists.txt
algos/extra_code/problems/3/include/: common.h  percolate.h  union.h
algos/extra_code/problems/3/src/: main.cpp  percolate.cpp  union.cpp
algos/knuth/: main.cpp
algos/quickfind/: main.cpp
algos/quickunion/: main.cpp
assert/: main  main.cpp
atexit/: main  main.cpp
bits/and/: main  main.cpp
bits/assign/: main  main.cpp
bits/iostream_ex/: main  (+1 more)
chapt2/: main  main.cpp
chapt7/: constants.h  main
cin_ignore/: main
cli_args/: main  main.cpp
comp_float/: main.cpp
declare/: main  main.cpp
do_while/: main  main.cpp
evil_globals/: main
exit/: main  main.cpp
expressions/: expr.cpp  op
fallthrough/: main  main.cpp
headerfiles/: add.h  main  main.cpp
headerguards/: add  add.cpp  add.h
helloworld/: hello  hello.cpp  makefile
implicit_conver/: main  main.cpp
int_expo/: check_overflow.h  main  main.cpp
iostream/: io  io.cpp  makefile
multifile/: main  main.cpp  multiply.cpp
numeric_conver/: main.cpp
operator/: op  op.cpp
parameters/: add  add.cpp  addmulti  getval  getval.cpp  main  main.cpp
rel_operators/: main
remainder/: main  main.cpp
sstream/: main.cpp
static_cast/: main  main.cpp
testcompat/: makefile  test.cpp
truncate/: main  main.cpp
type_alias/: main.cpp
var/: makefile  var  var.cpp
(+295 files in other folders)
